--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "repository": "<fill-your-repository-here>",
   "dependencies": {
     "@nativescript/theme": "~2.3.0",
+    "@vue/devtools": "^5.3.3",
+    "nativescript-socketio": "^3.3.1",
+    "nativescript-toasty": "^3.0.0-alpha.2",
     "nativescript-vue": "~2.4.0",
+    "nativescript-vue-devtools": "^1.4.0",
     "tns-core-modules": "~6.5.0"
   },
   "devDependencies": {
