--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nativescript-toasty": "^3.0.0-alpha.2",
     "nativescript-vue": "~2.4.0",
     "nativescript-vue-devtools": "^1.4.0",
-    "tns-core-modules": "~6.5.0"
+    "tns-core-modules": "~6.5.0",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "~7.1.0",
